# thea-recorder

./: .gitignore  CHANGELOG.md  Dockerfile.example  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-infra.yml  deploy-site.yml  publish-go.yml  publish-java.yml  publish-node.yml  publish-python-sdk.yml  publish-python.yml  publish-ruby.yml  publish.yml  release.yml
director/: pyproject.toml
director/src/thea_director/: __init__.py  director.py  motion.py  mouse.py  window.py  xdotool.py
director/src/thea_director/bridges/: selenium.py
director/tests/: test_director.py  test_keyboard.py  test_motion.py  test_mouse.py  test_rhythm.py  test_selenium_bridge.py  test_window.py
docs/: cli.md  composition.md  how-recording-works.md  integration-guide.md  orchestration.md  sdks.md  server.md
examples/: basic_usage.py  behave_environment.py  composed_auto_highlight.py  composed_grid.py  composed_side_by_side.py  composed_with_highlights.py  parallel_users.py  product_demo.py
infra/: bootstrap.yml  deploy.yml  dns.yml  site.yml
scripts/: bump-version.sh
sdks/go/: README.md  go.mod
sdks/go/recorder/: example_test.go  recorder.go  recorder_test.go
sdks/go/thea/: errors.go  example_test.go  recorder.go  recorder_test.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/com/recorder/: CompositionHighlight.java  CompositionStatus.java  Health.java  Panel.java  RecorderClient.java  RecorderError.java  RecordingInfo.java  RecordingResult.java  RecordingStatus.java  ValidationResult.java
sdks/java/src/test/java/com/recorder/: RecorderClientTest.java
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: index.ts
sdks/node/test/: recorder.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/tests/: test_client.py
sdks/python/thea/: __init__.py  client.py
sdks/ruby/: README.md  thea-recorder.gemspec
sdks/ruby/lib/: recorder.rb
sdks/ruby/test/: test_recorder.rb
site/: index.html
site/docs/: cli.html  docker.html  index.html  sdks.html  server.html  style.css
src/recorder/: __init__.py  cli.py  composer.py  recorder.py  report.py  server.py
src/thea/: __init__.py  cli.py  client.py  layout.py  recorder.py  server.py
src/thea/director/: __init__.py  director.py  keyboard.py  rhythm.py  window.py
src/thea/director/bridges/: selenium.py
src/thea/terminal/: terminal.py
tests/: test_cli.py  test_cli_display.py  test_composer.py  test_director_director.py  test_director_keyboard.py  test_director_motion.py  test_director_mouse.py  test_director_rhythm.py  test_director_selenium_bridge.py  test_director_window.py  test_integration.py  test_layout.py  test_recorder.py  test_recorder_display.py  test_recorder_launch.py  test_recorder_parity.py  test_recorder_steps.py  test_report.py  test_server.py  test_server_annotations.py  test_server_compositions.py  test_server_director.py  test_server_display.py  test_server_events.py  test_terminal.py
tests/e2e/: Dockerfile.go  Dockerfile.java  Dockerfile.node  Dockerfile.python  Dockerfile.ruby  Dockerfile.server  TestE2E.java  docker-compose.yml  run.sh  test_e2e.go  test_e2e.mjs  test_e2e.py  test_e2e.rb
tests/e2e-apps/: Dockerfile  conftest.py  docker-compose.yml  run.sh  test_dogfood.py  test_gnumeric.py  test_report.py  test_selenium_chromium.py  test_xterm.py
tests/e2e-apps/fixtures/: test_page.html  test_spreadsheet.csv
tests/e2e-apps/output/: report.html  working_spreadsheet.gnumeric
