[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thea-recorder"
version = "0.8.0"
description = "Record Xvfb virtual displays as MP4 video with live panel overlays and interactive HTML reports."
requires-python = ">=3.10"
dependencies = ["click>=8.0"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["testing", "video", "recording", "xvfb", "ffmpeg", "e2e", "behave", "cucumber", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
thea = "thea.cli:main"

[project.optional-dependencies]
server = ["flask>=3.0"]
director = ["thea-director"]
dev = ["pytest", "flask>=3.0", "thea-director"]

[project.urls]
Homepage = "https://github.com/BarkingIguana/thea"

[tool.uv.sources]
thea-director = { path = "director/", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
