[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thea-recorder"
version = "0.19.0"
description = "Record Xvfb virtual displays as MP4 video with live panel overlays and interactive HTML reports."
requires-python = ">=3.10"
dependencies = ["click>=8.0", "flask>=3.0", "selenium>=4.0"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["testing", "video", "recording", "xvfb", "ffmpeg", "e2e", "behave", "cucumber", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
thea = "thea.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/BarkingIguana/thea-recorder"

[tool.setuptools.packages.find]
where = ["src"]
