[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thea-director"
version = "0.6.0"
description = "Human-like display interaction for Thea recordings: keyboard, mouse, window management."
requires-python = ">=3.10"
dependencies = []
license = {text = "MIT"}
readme = "README.md"
keywords = ["testing", "xdotool", "automation", "gui", "xvfb", "recording", "thea"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
selenium = ["selenium>=4.0"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/BarkingIguana/thea"

[tool.setuptools.packages.find]
where = ["src"]
