[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thea-client"
version = "0.4.0"
description = "Python SDK for the thea recorder HTTP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["thea"]

[tool.pytest.ini_options]
testpaths = ["tests"]
